send mail / index page / compt page / news page

--- a/src/main/webapp/WEB-INF/views/htmls/comDetail.html
+++ b/src/main/webapp/WEB-INF/views/htmls/comDetail.html
@@ -86,6 +86,48 @@
 
             希望广大同学踊跃参加！
         </div>
+        <br/>
+        <div>
+            <table class="table table-responsive table-condensed table-hover" style="font-size: 13px;">
+                <tr><th width="200px;">--详细内容如下：</th><th></th></tr>
+                <tr>
+                    <td>主办单位：</td>
+                    <td>大连交通大学</td>
+                </tr>
+                <tr>
+                    <td>赛事等级：</td>
+                    <td>大连交通大学</td>
+                </tr>
+                <tr>
+                    <td>比赛进行地点：</td>
+                    <td>大连交通大学</td>
+                </tr>
+                <tr>
+                    <td>比赛进行日期：</td>
+                    <td>大连交通大学</td>
+                </tr>
+                <tr>
+                    <td>报名开始时间：</td>
+                    <td>大连交通大学</td>
+                </tr>
+                <tr>
+                    <td>报名截止时间：</td>
+                    <td>大连交通大学</td>
+                </tr>
+                <tr>
+                    <td>参赛形式：</td>
+                    <td>小组赛（最多 5人）</td>
+                </tr>
+                <tr>
+                    <td>是否需要上传个人作品：</td>
+                    <td>【是】【说明如下】：需要上传个人作品</td>
+                </tr>
+                <tr>
+                    <td>是否为资助项目：</td>
+                    <td>【是】【说明如下】：学校资助每个小组1000元</td>
+                </tr>
+            </table>
+        </div>
     </div>
 </div>
 
