--- a/src/main/webapp/WEB-INF/views/htmls/index.html
+++ b/src/main/webapp/WEB-INF/views/htmls/index.html
@@ -131,7 +131,14 @@
         <p><br/>
         <div class="panel panel-primary" style="height: 415px">
             <div class="panel-heading">
-                <span class="glyphicon glyphicon-new-window">新闻中心</span>
+                <span class="glyphicon glyphicon-file sr-only"></span>
+                <div class="navbar-left">
+                    <a class="btn btn-default"><b><span class="glyphicon glyphicon-file"></span>新闻中心</b></a>
+                    <a href="/man/compt/list" class="btn btn-default btn-xs btn-info">查看更多</a>
+                </div>
+                <!--<div class="navbar-right">
+                    <a href="/man/compt/list" class="btn btn-default">查看更多</a>
+                </div>-->
             </div>
 
             <div class="list-group" style="font-size: 12px;">
@@ -145,8 +152,7 @@
                 <a class="list-group-item" href="comDetail.html">蓝桥杯大连地区本科A组 <span style="color: #2aabd2">[2014-06-01]</span></a>
                 <a class="list-group-item" href="comDetail.html">蓝桥杯大连地区本科A组 <span style="color: #2aabd2">[2014-06-01]</span></a>
             </div>
-            <button class="btn btn-info btn-xs btn-block">查看更多</button>
-
+            <!--<button class="btn btn-info btn-xs btn-block">查看更多</button>-->
         </div>
         <!--line-2 left-3-->
         <div class="panel panel-default" style="height: 300px">
@@ -213,7 +219,7 @@
         <!--学院风采-->
         <div class="col-xs-12">
             <div class="panel panel-default" style="height: 646px">
-                <h3><label class="label label-danger center-block">学院风采</label></h3>
+                <h3><label class="label label-primary center-block">学院风采</label></h3>
                 <div class="panel-body">
                     <div class="list-group">
                         <div class="list-group-item">
