--- a/src/main/webapp/WEB-INF/views/htmls/index.html
+++ b/src/main/webapp/WEB-INF/views/htmls/index.html
@@ -5,6 +5,7 @@
     <title>大连交通大学竞赛系统</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="resources/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="resources/custom/css/common.css">
     <!--<link rel="stylesheet" href="resources/flat/css/flat-ui.css">-->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -21,45 +22,39 @@
 <!-- common top part start-->
 <div class="container-fluid">
     <div><img src="resources/img/top1.jpg" height="150px" width="100%"></div>
-    <nav class="navbar navbar-default" role="navigation">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <a class="navbar-brand" href="index.html"><span class="glyphicon glyphicon-home">首页</span></a>
+    <div class="col-xs-12 navbar alert alert-info">
+        <!--<nav class="navbar" role="navigation">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-left common-navbar" style="font-size: 18px;">
+                    <li><a href="comNews.html" class="label label-primary"><span>官网首页</span></a></li>
+                    <li><a href="comNews.html" class="label label-danger"><span>赛事公告</span></a></li>
+                    <li><a href="news.html" class="label label-info"><span>新闻中心</span></a></li>
+                    <li><a href="achievementShow.html" class="label label-success"><span>学院风采</span></a></li>
+                    <li><a href="search.html" class="label label-warning"><span>获奖查询</span></a></li>
+                    <li><a href="aboutUs.html" class="label label-primary"><span>关于我们</span></a></li>
+                </ul>
+            </div>&lt;!&ndash; /.navbar-collapse &ndash;&gt;
+        </nav>-->
+        <div class="col-lg-2" style="text-align: center">
+            <a class="btn btn-lg btn-default btn-block nav-li"><b>官网首页</b></a>
+        </div>
+        <div class="col-lg-2" style="text-align: center">
+            <a class="btn btn-lg btn-info btn-block nav-li">官网首页</a>
+        </div>
+        <div class="col-lg-2" style="text-align: center">
+            <a class="btn btn-lg btn-info btn-block nav-li">官网首页</a>
+        </div>
+        <div class="col-lg-2" style="text-align: center">
+            <a class="btn btn-lg btn-info btn-block nav-li">官网首页</a>
+        </div>
+        <div class="col-lg-2" style="text-align: center">
+            <a class="btn btn-lg btn-info btn-block nav-li">官网首页</a>
+        </div>
+        <div class="col-lg-2" style="text-align: center">
+            <a class="btn btn-lg btn-info btn-block nav-li">官网首页</a>
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right" style="font-size: 18px;">
-                <li><a href="comNews.html" class="label label-danger"><span style="color: #000000">赛事公告</span></a></li>
-                <li><a href="news.html" class="label label-info"><span style="color: #000000">新闻中心</span></a></li>
-                <li><a href="achievementShow.html" class="label label-success"><span style="color: #000000">学院风采</span></a></li>
-                <li><a href="search.html" class="label label-warning"><span style="color: #000000">获奖查询</span></a></li>
-                <li><a href="aboutUs.html" class="label label-primary"><span style="color: #000000">关于我们</span></a></li>
-                <!--
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
-                -->
-            </ul>
-            <!--
-            <form class="navbar-form navbar-left" role="search">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
-                </div>
-                <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-            -->
-        </div><!-- /.navbar-collapse -->
-    </nav>
+    </div>
 </div>
 <!--common top part end-->
 
@@ -141,17 +136,9 @@
                 </div>-->
             </div>
 
-            <div class="list-group" style="font-size: 12px;">
-                <a class="list-group-item" href="comDetail.html"><span class="label label-danger">Top</span> 蓝桥杯大连地区本科A组 <span style="color: #2aabd2">[2014-06-01]</span></a>
-                <a class="list-group-item" href="comDetail.html"><span class="label label-danger">Top</span> 蓝桥杯大连地区本科A组 <span style="color: #2aabd2">[2014-06-01]</span></a>
-                <a class="list-group-item" href="comDetail.html">蓝桥杯大连地区本科A组 <span style="color: #2aabd2">[2014-06-01]</span></a>
-                <a class="list-group-item" href="comDetail.html">蓝桥杯大连地区本科A组 <span style="color: #2aabd2">[2014-06-01]</span></a>
-                <a class="list-group-item" href="comDetail.html">蓝桥杯大连地区本科A组 <span style="color: #2aabd2">[2014-06-01]</span></a>
-                <a class="list-group-item" href="comDetail.html">蓝桥杯大连地区本科A组 <span style="color: #2aabd2">[2014-06-01]</span></a>
-                <a class="list-group-item" href="comDetail.html">蓝桥杯大连地区本科A组 <span style="color: #2aabd2">[2014-06-01]</span></a>
-                <a class="list-group-item" href="comDetail.html">蓝桥杯大连地区本科A组 <span style="color: #2aabd2">[2014-06-01]</span></a>
-                <a class="list-group-item" href="comDetail.html">蓝桥杯大连地区本科A组 <span style="color: #2aabd2">[2014-06-01]</span></a>
-            </div>
+        <div class="alert">
+            <h4>Sorry!系统暂未发布任何赛事...</h4>
+        </div>
             <!--<button class="btn btn-info btn-xs btn-block">查看更多</button>-->
         </div>
         <!--line-2 left-3-->
@@ -173,22 +160,14 @@
         <div class="col-sm-9">
             <div class="panel panel-primary" style="height: 415px">
                 <div class="panel-heading">
-                    <span class="glyphicon glyphicon-file">赛事公告</span>
-                    <!--<span style="text-align: right">了解更多</span>-->
+                    <div>
+                        <a href="javascript:void(0)" class="btn btn-sm btn-default">新闻中心</a>
+                    </div>
                 </div>
 
-                <div class="list-group" style="font-size: 12px;">
-                    <a class="list-group-item" href="comDetail.html"><span class="label label-danger">Top</span> 蓝桥杯大连地区本科A组 <span style="color: #2aabd2">[2014-06-01]</span></a>
-                    <a class="list-group-item" href="comDetail.html"><span class="label label-danger">Top</span> 蓝桥杯大连地区本科A组 <span style="color: #2aabd2">[2014-06-01]</span></a>
-                    <a class="list-group-item" href="comDetail.html">蓝桥杯大连地区本科A组 <span style="color: #2aabd2">[2014-06-01]</span></a>
-                    <a class="list-group-item" href="comDetail.html">蓝桥杯大连地区本科A组 <span style="color: #2aabd2">[2014-06-01]</span></a>
-                    <a class="list-group-item" href="comDetail.html">蓝桥杯大连地区本科A组 <span style="color: #2aabd2">[2014-06-01]</span></a>
-                    <a class="list-group-item" href="comDetail.html">蓝桥杯大连地区本科A组 <span style="color: #2aabd2">[2014-06-01]</span></a>
-                    <a class="list-group-item" href="comDetail.html">蓝桥杯大连地区本科A组 <span style="color: #2aabd2">[2014-06-01]</span></a>
-                    <a class="list-group-item" href="comDetail.html">蓝桥杯大连地区本科A组 <span style="color: #2aabd2">[2014-06-01]</span></a>
-                    <a class="list-group-item" href="comDetail.html">蓝桥杯大连地区本科A组 <span style="color: #2aabd2">[2014-06-01]</span></a>
+                <div class="alert">
+                    <h4>Sorry!系统暂未发布任何赛事...</h4>
                 </div>
-                <button class="btn btn-info btn-xs btn-block">查看更多</button>
 
             </div>
         </div>
@@ -198,18 +177,31 @@
                 <div class="panel-heading"><span class="glyphicon glyphicon-user"/>我的帐号</div>
                 <div class="panel-body">
                     <div class="my-index-loginPanel" style="text-align: center">
-                        <span class="glyphicon glyphicon-user">个人信息</span>
+                        <span class="glyphicon glyphicon-user">账号登陆</span>
                         <p>
                         <div>
                             <img src="resources/img/img7.jpg" style="width: 100px" alt="..." class="img-thumbnail">
-                            <p><h6>姓名：周荣辉</h6>
+                            <!--<p><h6>姓名：周荣辉</h6>
                             <p><h6>身份：学生</h6>
                             <p><h6>学院：机械学院</h6>
                             <p><h6>专业：软件工程</h6>
-                            <p><h6>学号：1018160222</h6>
-                            <p><button class="btn btn-info btn-block">管理中心</button>
-                            <p><button class="btn btn-warning btn-block">注销帐号</button>
+                            <p><h6>学号：1018160222</h6>-->
+                            <br/><br/>
+                            <form role="form">
+                                <div class="form-group">
+                                    <!--<label for="username">用户名</label>-->
+                                    <input type="text" class="form-control" id="username" name="username" placeholder="邮箱/学号">
+                                </div>
+                                <div class="form-group">
+                                    <!--<label for="pwd">密码</label>-->
+                                    <input type="password" class="form-control" id="pwd" name="pwd" placeholder="密码">
+                                </div>
+                                <div class="form-group">
+                                    <button type="button" class="btn btn-success btn-block">登陆</button>
+                                </div>
+                            </form>
                             <p><button class="btn btn-primary btn-block">注册帐号</button>
+                            <p><small>仅限大连交通大学在校生注册使用</small>
                         </div>
                     </div>
                 </div>
@@ -323,6 +315,7 @@
 <script src="resources/dist/js/jquery-1.10.2.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="resources/dist/js/bootstrap.min.js"></script>
+<script src="resources/custom/js/common.js"></script>
 <!--common bottom part end-->
 </body>
 </html>
