--- a/src/main/webapp/WEB-INF/views/htmls/index.html
+++ b/src/main/webapp/WEB-INF/views/htmls/index.html
@@ -23,7 +23,7 @@
 <div class="container-fluid">
     <div><img src="resources/img/top1.jpg" height="150px" width="100%"></div>
     <div class="col-xs-12 navbar alert alert-info">
-        <!--<nav class="navbar" role="navigation">
+        <nav class="navbar" role="navigation">
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-left common-navbar" style="font-size: 18px;">
                     <li><a href="comNews.html" class="label label-primary"><span>官网首页</span></a></li>
@@ -33,27 +33,8 @@
                     <li><a href="search.html" class="label label-warning"><span>获奖查询</span></a></li>
                     <li><a href="aboutUs.html" class="label label-primary"><span>关于我们</span></a></li>
                 </ul>
-            </div>&lt;!&ndash; /.navbar-collapse &ndash;&gt;
-        </nav>-->
-        <div class="col-lg-2" style="text-align: center">
-            <a class="btn btn-lg btn-default btn-block nav-li"><b>官网首页</b></a>
-        </div>
-        <div class="col-lg-2" style="text-align: center">
-            <a class="btn btn-lg btn-info btn-block nav-li">官网首页</a>
-        </div>
-        <div class="col-lg-2" style="text-align: center">
-            <a class="btn btn-lg btn-info btn-block nav-li">官网首页</a>
-        </div>
-        <div class="col-lg-2" style="text-align: center">
-            <a class="btn btn-lg btn-info btn-block nav-li">官网首页</a>
-        </div>
-        <div class="col-lg-2" style="text-align: center">
-            <a class="btn btn-lg btn-info btn-block nav-li">官网首页</a>
-        </div>
-        <div class="col-lg-2" style="text-align: center">
-            <a class="btn btn-lg btn-info btn-block nav-li">官网首页</a>
-        </div>
-
+            </div><!-- /.navbar-collapse -->
+        </nav>
     </div>
 </div>
 <!--common top part end-->
@@ -126,14 +107,14 @@
         <p><br/>
         <div class="panel panel-primary" style="height: 415px">
             <div class="panel-heading">
-                <span class="glyphicon glyphicon-file sr-only"></span>
-                <div class="navbar-left">
-                    <a class="btn btn-default"><b><span class="glyphicon glyphicon-file"></span>新闻中心</b></a>
-                    <a href="/man/compt/list" class="btn btn-default btn-xs btn-info">查看更多</a>
+                <div class="nav">
+                    <div class="navbar-left">
+                        <label class="label label-danger" style="font-size: 12px;"><b><span class="glyphicon glyphicon-file"></span>新闻中心</b></label>
+                    </div>
+                    <div class="navbar-right">
+                        <a type="button" class="btn btn-xs btn-info">更多</a>
+                    </div>
                 </div>
-                <!--<div class="navbar-right">
-                    <a href="/man/compt/list" class="btn btn-default">查看更多</a>
-                </div>-->
             </div>
 
         <div class="alert">
@@ -142,7 +123,7 @@
             <!--<button class="btn btn-info btn-xs btn-block">查看更多</button>-->
         </div>
         <!--line-2 left-3-->
-        <div class="panel panel-default" style="height: 300px">
+        <div class="panel panel-primary" style="height: 300px">
             <h3><label class="label label-danger center-block">友情链接</label></h3>
             <div class="list-group" style="font-size: 12px;">
                 <a href="#" class="list-group-item active">大连交通大学竞赛官网</a>
@@ -160,12 +141,17 @@
         <div class="col-sm-9">
             <div class="panel panel-primary" style="height: 415px">
                 <div class="panel-heading">
-                    <div>
-                        <a href="javascript:void(0)" class="btn btn-sm btn-default">新闻中心</a>
+                    <div class="nav">
+                        <div class="navbar-left">
+                            <label class="label label-danger" style="font-size: 12px;"><b><span class="glyphicon glyphicon-file"></span>新闻中心</b></label>
+                        </div>
+                        <div class="navbar-right">
+                            <a type="button" class="btn btn-xs btn-info">更多</a>
+                        </div>
                     </div>
                 </div>
 
-                <div class="alert">
+                <div class="alert alert-warning">
                     <h4>Sorry!系统暂未发布任何赛事...</h4>
                 </div>
 
@@ -174,34 +160,50 @@
 
         <div class="col-sm-3">
             <div class="panel panel-primary" style="height: 415px;">
-                <div class="panel-heading"><span class="glyphicon glyphicon-user"/>我的帐号</div>
+                <div class="panel-heading">
+                    <div class="nav">
+                        <div class="navbar-left">
+                            <label class="label label-danger" style="font-size: 12px;"><b><span class="glyphicon glyphicon-user"></span>我的账号</b></label>
+                        </div>
+                    </div>
+                </div>
                 <div class="panel-body">
                     <div class="my-index-loginPanel" style="text-align: center">
-                        <span class="glyphicon glyphicon-user">账号登陆</span>
+                        <span class="glyphicon glyphicon-user">账号信息</span>
                         <p>
                         <div>
                             <img src="resources/img/img7.jpg" style="width: 100px" alt="..." class="img-thumbnail">
-                            <!--<p><h6>姓名：周荣辉</h6>
-                            <p><h6>身份：学生</h6>
-                            <p><h6>学院：机械学院</h6>
-                            <p><h6>专业：软件工程</h6>
-                            <p><h6>学号：1018160222</h6>-->
                             <br/><br/>
-                            <form role="form">
+                            <!--<form role="form">
                                 <div class="form-group">
-                                    <!--<label for="username">用户名</label>-->
-                                    <input type="text" class="form-control" id="username" name="username" placeholder="邮箱/学号">
+                                    &lt;!&ndash;<label for="username">用户名</label>&ndash;&gt;
+                                    <input type="text" class="form-control" id="username" name="username" placeholder="邮箱/学号"  style="font-size: 5px;">
                                 </div>
                                 <div class="form-group">
-                                    <!--<label for="pwd">密码</label>-->
-                                    <input type="password" class="form-control" id="pwd" name="pwd" placeholder="密码">
+                                    &lt;!&ndash;<label for="pwd">密码</label>&ndash;&gt;
+                                    <input type="password" class="form-control" id="pwd" name="pwd" placeholder="密码"  style="font-size: 5px;">
                                 </div>
                                 <div class="form-group">
                                     <button type="button" class="btn btn-success btn-block">登陆</button>
                                 </div>
-                            </form>
-                            <p><button class="btn btn-primary btn-block">注册帐号</button>
-                            <p><small>仅限大连交通大学在校生注册使用</small>
+                            </form>-->
+
+                        <!--already login-->
+                            <div id="indexLoginSucc">
+                                <form role="form">
+                                    <div class="form-group">
+                                        <label class="form-control">周荣辉</label>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="form-control">学生账号</label>
+                                    </div>
+
+                                </form>
+                                <button class="btn btn-success btn-block">注销登录</button>
+                                <br/>
+                                <p><button class="btn btn-primary btn-block">个人中心</button>
+                                <p><small>仅限大连交通大学在校生注册使用</small>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -210,7 +212,7 @@
 
         <!--学院风采-->
         <div class="col-xs-12">
-            <div class="panel panel-default" style="height: 646px">
+            <div class="panel panel-primary" style="height: 646px">
                 <h3><label class="label label-primary center-block">学院风采</label></h3>
                 <div class="panel-body">
                     <div class="list-group">
@@ -252,10 +254,12 @@
 </div>
 <!--line-1 end -->
 
-<div class="container-fluid"><br/></div>
+<div class="container-fluid"><br/><br/></div>
 <!--time line-->
 <div class="container-fluid">
-    <div class="text-center"><h4><span class="glyphicon glyphicon-time">赛事日程</span></h4></div>
+    <div class="text-center">
+        <h4><label class="label label-primary"><span class="glyphicon glyphicon-time">赛事日程</span></label></h4>
+    </div>
     <div class="progress progress-striped">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
     </div>
